Adding Database support and patching bugs