@@ -1,9 +1,10 @@
 package fr.palmus.evoplugin.commands.completer;
 
-import org.bukkit.Bukkit;
+import fr.palmus.evoplugin.commands.PeriodExecutor;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
+import org.bukkit.entity.Player;
 import org.bukkit.util.StringUtil;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -11,26 +12,32 @@ import org.jetbrains.annotations.Nullable;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
-public class ExpCompleter implements TabCompleter {
+public class PeriodCompleter implements TabCompleter {
+
     @Nullable
     @Override
     public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, String[] args) {
+
+        if (!(sender instanceof Player player)) {
+            return null;
+        }
+
         final List<String> completions = new ArrayList<>();
 
         if(args.length == 1) {
-            StringUtil.copyPartialMatches(args[0], Arrays.asList("add", "set", "subtract"), completions);
+            if(!PeriodExecutor.checkPerms(player)) {
+                StringUtil.copyPartialMatches(args[0], Arrays.asList("downgrade", "upgrade", "info", "reset", "resetall"), completions);
+            }else{
+                StringUtil.copyPartialMatches(args[0], List.of("info"), completions);
+            }
         }
 
         if(args.length == 2) {
             return null;
         }
 
-        if(args.length == 3) {
-            StringUtil.copyPartialMatches(args[2], Arrays.asList("10", "50", "100", "500", "1000", "10000"), completions);
-        }
-
         return completions;
     }
+
 }
